--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,22 @@
     transform: rotate(360deg);
   }
 }
+.bk{
+  background: radial-gradient(#53c9f8,#1497f1);
+  height: 40vh;
+}
+.bal{
+  padding:30px 1px;
+  height: 13em;
+}
+.arrows{
+  position:absolute;
+  left:0;
+  right:0;
+
+  margin-left: auto;
+  margin-right: auto;
+  z-index: 2;
+  height: 40vh;
+  margin-top: 18vh;
+}
