--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,9 @@
   border-top-right-radius: 50px;
   border: 2px solid cyan;
 }
+.transaction{
+  font-size: 3vh;
+}
 input:focus::placeholder {
   color: transparent;
 }
